  * Fixed status pie chart.
  * Fix some javascript errors.
  * Add organisation_types table and allow assignment of types to
    organisations.
  * Some improvements to permissions handling.
  * Essentially complete attempts to synchronise database migrated forward
    with a database which is freshly created.  Full SQL inserts should now
    work.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Sun, 02 Sep 2007 21:21:17 +1200

wrms (2.5.5) unstable; urgency=low

  * Support icons for themes.
  * Improve 'from scratch' installation experience.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Fri, 11 May 2007 04:31:13 +1200

wrms (2.5.4) unstable; urgency=low

  * Fix active/inactive flag.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Mon, 07 May 2007 14:59:22 +1200

wrms (2.5.3) unstable; urgency=low

  * Fix last_org_request(org_code) to actually work.
  * Correct handling of sorting for saved searches.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Mon, 07 May 2007 11:22:28 +1200

wrms (2.5.2) unstable; urgency=low

  * Add a "Review?" column to these reports to present the review_needed field.
  * Make the hours column right justified.
  * Allow $rlsort to be set from the GET URL.
  * Switch description of active flag.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Thu, 26 Apr 2007 13:14:01 +1200

wrms (2.5.1) unstable; urgency=low

  * Fix handling of active flag in user maintenance.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Tue, 24 Apr 2007 16:32:55 +1200

wrms (2.5.0) unstable; urgency=low

  * Overhauled DB creation, building on Dennie's work, so we can now create a
    working WRMS without using an existing DB as a starting point.
  * Patch to retrofit many more relational integrity constraints, pointed out
    by Guillaume.
  * Added a total_work(request_id) function and the facility to include this
    as a column in request searches. WR40502
  * Fix CalDAV handling to cope with Sunbird changes. WR40424
  * Fix PHP5 compatibility with Request updates.