@@ -1,6 +1,9 @@
 <?php
   include("always.php");
   require_once("authorisation-page.php");
+
+  $session->LoginRequired();
+
   require_once("maintenance-page.php");
 
   if ( isset($system_id) ) $system_id = intval($system_id);
