@@ -1,6 +1,6 @@
 <!DOCTYPE webproject>
 <webproject>
-  <project usePreviewPrefix="0" preview="http://mywrms/" previewPrefix="file:file%3A" type="Local" newfiles="php" name="WRMS" encoding="iso 8859-1" >
+  <project usePreviewPrefix="0" preview="http://mywrms/" type="Local" previewPrefix="file:file%3A" newfiles="php" name="WRMS" encoding="iso 8859-1" >
     <upload/>
     <author>Andrew McMillan</author>
     <email>wrms@catalyst.net.nz</email>
@@ -321,8 +321,9 @@
     <item url="scripts/patches/patch-1.99.14.sql" uploadstatus="1" />
     <item url="scripts/patches/patch-1.99.15.sql" uploadstatus="1" />
     <item url="scripts/patches/patch-1.99.16.sql" uploadstatus="1" />
-    <item url="html/opensearch.php" />
-    <item url="html/js/statuspie.js" />
-    <item url="inc/in.always.php" />
+    <item url="html/opensearch.php" uploadstatus="1" />
+    <item url="html/js/statuspie.js" uploadstatus="1" />
+    <item url="inc/in.always.php" uploadstatus="1" />
+    <item url="scripts/dba/cluster.sql" />
   </project>
 </webproject>
